# yt_transcript

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  utils.py
.github/workflows/: ci.yml
tests/: conftest.py  test_lifespan.py  test_main.py  test_transcript_simple.py  test_utils.py
