[project]
name = "yt-transcript"
version = "0.1.0"
description = "A lightweight FastAPI service that fetches and caches YouTube video transcripts."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "youtube-transcript-api>=1.2.3",
    "fastapi[standard]",
    "aiosqlite",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
